# PrivateBrowser

./: .gitignore  CMakeLists.txt  PrivateBrowser.sln  README.md
PrivateBrowser/: AddressBar.h  AddressInput.cpp  AddressInput.h  AddressTool.cpp  AddressTool.h  App.cpp  App.h  ControlBase.cpp  ControlBase.h  DialogProgress.cpp  DialogProgress.h  EnvironmentBox.cpp  EnvironmentBox.h  HostImpl.cpp  HostImpl.h  Host_h.h  Host_i.c  LeftBar.cpp  LeftBar.h  Page.cpp  Page.h  PrivateBrowser.aps  PrivateBrowser.cpp  PrivateBrowser.h  PrivateBrowser.qrc  PrivateBrowser.vcxproj  PrivateBrowser.vcxproj.filters  Res.cpp  Res.h  SideBar.cpp  SideBar.h  TitleBar.cpp  TitleBar.h  TitleBarLogo.cpp  TitleBarLogo.h  TitleBarToolBtn.cpp  TitleBarToolBtn.h  TitleBarWindowBtn.cpp  TitleBarWindowBtn.h  TitleBarWindowBtns.cpp  (+15 more)
res/: res.qrc
src/: AddressBar.cpp  LeftBar.cpp  PrivateBrowser.cpp  PrivateBrowser.h  TitleBar.cpp  TitleBar.h  TitleBarLogo.cpp  TitleBarToolBtn.cpp  TitleBarToolBtn.h  TitleBarWindowBtn.h  main.cpp
ui/: iconfont.css  index.css  index.html  index.js  package-lock.json  package.json
ui/scripts/: build.js
ui/src/: TitleBar.html  index.js
