cmake_minimum_required(VERSION 3.18)
project(PrivateBrowser)
set(CMAKE_CXX_STANDARD 20)
aux_source_directory(./src DIR_SRCS)
add_executable(PrivateBrowser ${DIR_SRCS})

if(WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /manifestdependency:\"type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='*' publicKeyToken='6595b64144ccf1df' language='*'\"")
    set_property(TARGET PrivateBrowser PROPERTY VS_DPI_AWARE "PerMonitor")
    target_compile_definitions(PrivateBrowser PRIVATE $<$<CONFIG:Debug>:UNICODE _UNICODE DEBUG NOMINMAX _SILENCE_ALL_CXX20_DEPRECATION_WARNINGS WIN32 _WINDOWS>)
    target_compile_definitions(PrivateBrowser PRIVATE $<$<CONFIG:Release>:UNICODE _UNICODE NDEBUG NOMINMAX _SILENCE_ALL_CXX20_DEPRECATION_WARNINGS WIN32 _WINDOWS>)
    TARGET_LINK_LIBRARIES(PrivateBrowser Dwmapi kernel32 user32 shell32)
elseif(APPLE)
endif()